# gameunjang-agi

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  .prettierignore  .secret-patterns.json  AGENTS.md  lefthook.yml  opencode.json  package-lock.json  package.json  requirements.txt  vercel.json
.githooks/: pre-push
api/: index.py
backend/: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  RUNTIME.md  pyproject.toml
backend/api/: __init__.py  index.py
backend/app/: __init__.py  answer_generation.py  chat_service.py  config.py  cost_control.py  main.py  schemas.py
backend/app/guard/: __init__.py  tourism_guard.py
backend/app/routing/: __init__.py  api_router.py  metadata.py
backend/app/routing/data/current/: tour_api_metadata.json
backend/app/routing/data/schemas/: tour_api_metadata.schema.json
backend/tests/: test_answer_generation.py  test_api_routing.py  test_chat.py  test_cost_control.py  test_data_refresh.py  test_external_llm.py  test_external_public_apis.py  test_mvp_completion_gate.py  test_tourism_guard.py
backend/tests/fixtures/: tourism_area_based_list.json  weather_vilage_forecast.json
backend/tools/: __init__.py  data_refresh.py
docs/: COST_CONTROL.md  DEPLOYMENT.md  IMPLEMENTATION_SPEC.md  MILESTONES.md  MVP_COMPLETION_GATE.md  PRD.md  PROJECT_BASELINE.md  TRD.md
frontend/: .env.example  .gitignore  ARCHITECTURE.md  RUNTIME.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  tsconfig.test.json
scripts/: run-if-dir.mjs  scan-secrets.mjs  validate-commit-msg.mjs
(+25 files in other folders)
