[project]
name = "gameunjang-agi-backend"
version = "0.1.0"
description = "FastAPI-compatible backend scaffold for Gameunjang-agi."
readme = "ARCHITECTURE.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "fastapi>=0.116,<1.0",
  "pydantic>=2.11,<3.0",
  "starlette>=0.46,<1.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.4,<9.0",
  "ruff>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.4,<9.0",
  "ruff>=0.12,<1.0",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.setuptools]
packages = ["api", "app"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
